      Andrey Rahmatullin for the suggestion.  (Closes: #847558)
    + [NT] Apply patch from Josh Triplett to add new sections to
      descriptions.
  * checks/files.desc:
    + [NT] Document that we no longer accept "virtual packages"
      for deliberately empty packages.  If your package receives
      an "empty-binary-package" tag, please replace the use of
      "virtual package".
  * checks/manpages.pm:
    + [JW, NT] Fix false negative manpage-named-after-build-path
      for packages built by sbuild.  (Closes: #801760)
  * checks/scripts.{desc,pm}:
    + [JW, NT] Apply patch from Antonio Ospite that updates the
      test for php scripts without a php-cli dependency.  Thanks
      to Ondřej Surý for the report and Mathieu Parent for the
      initial patch.  (Closes: #818962)
    + [CL, NT] Warn about new source packages providing a python2
      package as EOL for python2 is expected in 2020, which is
      before buster's expected EOL.  (Closes: #829744)

  * collection/objdump-info.desc:
    + [NT] Bump version due to RUNPATH collection.

  * commands/lintian:
    + [NT] Deprecate --fail-on-warnings, which will be removed in
      Debian/buster.

  * data/binaries/embedded-libs:
    + [BR] Allow openssl1.0 as source package.  (Closes: #843406).
  * data/debhelper/dh_commands-manual:
    + [NT] Apply patch from Piotr Ożarowski that ensure that
      consumers of dh_python2 Build-Depends on dh-python.
      (Closes: #740161)
  * data/fields/archive-sections:
    + [NT] Apply patch from Josh Triplett to add javascript and
      rust sections.  (Closes: #847535)
  * data/files/privacy-breaker-websites:
    + [BR] Detect more logos.
  * data/scripts/interpreters:
    + [NT] Apply patch from Antonio Ospite to correct a false
      positive warning for python scripts using python2 in the
      shebang line.  Thanks to Per Andersson for the report and
      Luca Boccassi for the initial patch for solving this.
      (Closes: #743599)