@@ -49,3 +49,11 @@ override_dh_install:
 	mkdir -p $(SHARE)/cmake-3.1/Modules
 	touch $(SHARE)/cmake-3.1/FindFoo.cmake
 	touch $(SHARE)/cmake-3.1/Modules/FindVar.cmake
+
+	# Ignored Cargo sources
+	mkdir -p $(SHARE)/cargo/registry/crate-1.0.0
+	touch $(SHARE)/cargo/registry/crate-1.0.0/.gitignore
+	touch $(SHARE)/cargo/registry/crate-1.0.0/LICENSE
+	echo '#!/bin/sh' > $(SHARE)/cargo/registry/crate-1.0.0/test.sh
+	echo '#!/usr/bin/python' > $(SHARE)/cargo/registry/crate-1.0.0/test.py
+	chmod a+x $(SHARE)/cargo/registry/crate-1.0.0/test.py
