@@ -27,6 +27,10 @@ lintian (2.5.50) UNRELEASED; urgency=medium
       for deliberately empty packages.  If your package receives
       an "empty-binary-package" tag, please replace the use of
       "virtual package".
+  * checks/{files,scripts}.pm:
+    + [NT] Apply patch from Josh Triplett to exclude files under
+      /usr/share/cargo/registry/ from a few checks as that directory
+      contains unmodified upstream sources.  (Closes: #845201)
   * checks/manpages.pm:
     + [JW, NT] Fix false negative manpage-named-after-build-path
       for packages built by sbuild.  (Closes: #801760)
